<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:titleTextColor="@color/text_color" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_28"
        android:text="@string/enter_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_enter_password"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_42"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_16"
        android:text="@string/password_rule"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputLayoutStyle.OutlinedBox"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_16" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_disclaimer"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_72"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/til_password"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disclaimer_2"
        app:layout_constraintEnd_toEndOf="@id/tv_disclaimer"
        app:layout_constraintStart_toStartOf="@id/tv_disclaimer"
        app:layout_constraintTop_toBottomOf="@id/tv_disclaimer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_100"
        android:layout_marginBottom="@dimen/dp_24"
        android:backgroundTint="@color/btn_red"
        android:elevation="@dimen/dp_0"
        android:paddingVertical="@dimen/dp_12"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dp_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>